--- a/src/index.html
+++ b/src/index.html
@@ -50,6 +50,7 @@
     <script src="assets/plugins/sparkline/jquery.sparkline.min.js"></script>
     <!--Custom JavaScript -->
     <script src="assets/js/custom.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@8"></script>
     
 </body>
 </html>
