--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,11 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <!-- Google -->
+  <script src="https://apis.google.com/js/platform.js"></script>
+  <meta name="google-signin-client_id" content="361759443978-gqg4m7uchreus416gjbiv3nmiiuceodm.apps.googleusercontent.com">
+  
 </head>
 <body class="fix-header card-no-border fix-sidebar">
     <!-- Preloader - style you can find in spinners.css -->
