--- a/src/index.html
+++ b/src/index.html
@@ -11,22 +11,12 @@
   <link href="assets/css/style.css" rel="stylesheet">
   <!-- You can change the theme colors from here -->
   <link id="tema" id="theme" rel="stylesheet">
-  <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-<![endif]-->
-
-  <base href="/">
-
+  <!-- <base href="/"> -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-
   <!-- Google -->
   <script src="https://apis.google.com/js/platform.js"></script>
   <meta name="google-signin-client_id" content="361759443978-gqg4m7uchreus416gjbiv3nmiiuceodm.apps.googleusercontent.com">
-  
 </head>
 <body class="fix-header card-no-border fix-sidebar">
     <!-- Preloader - style you can find in spinners.css -->
